jdk.management module
not jdk.management.jfr